# TTKDownloader

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_cn.md  README_tc.md  TTKDownloader.pri  TTKDownloader.pro  TTKVersion.pri  downloadglobal.h  downloadprivate.h  downloadversion.h  ttkglobal.h  ttkprivate.h  ttkversion.h
TTKModule/: CMakeLists.txt  TTKCore.rc  TTKModule.pri  TTKModule.pro  downloadapplication.cpp  downloadapplication.h  downloadapplicationmodule.cpp  downloadapplicationmodule.h  downloadapplicationobject.cpp  downloadapplicationobject.h  downloadbottomareawidget.cpp  downloadbottomareawidget.h  downloadleftareawidget.cpp  downloadleftareawidget.h  downloadrightareawidget.cpp  downloadrightareawidget.h  downloadtopareawidget.cpp  downloadtopareawidget.h
TTKModule/TTKCore/: CMakeLists.txt  TTKCore.pri
TTKModule/TTKCore/downloadCoreKits/: CMakeLists.txt  DownloadCoreKits.pri  downloadabstractxml.cpp  downloadabstractxml.h  downloadbackgroundconfigmanager.cpp  downloadbackgroundconfigmanager.h  downloadbackgroundmanager.cpp  downloadbackgroundmanager.h  downloadbreakpointconfigmanager.cpp  downloadbreakpointconfigmanager.h  downloadconfigmanager.cpp  downloadconfigmanager.h  downloadcryptographichash.cpp  downloadcryptographichash.h  downloadextractmanager.cpp  downloadextractmanager.h  downloadextractwrap.cpp  downloadextractwrap.h  downloadextractwrapper.cpp  downloadextractwrapper.h  downloadglobaldefine.h  downloadhotkeymanager.cpp  downloadhotkeymanager.h  downloadlicensecore.cpp  downloadlicensecore.h  downloadlistconfigmanager.cpp  downloadlistconfigmanager.h  downloadlogger.h  downloadnumberdefine.h  downloadobject.h  downloadotherdefine.h  downloadrecordconfigmanager.cpp  downloadrecordconfigmanager.h  downloadruntimemanager.cpp  downloadruntimemanager.h  downloadsettingmanager.h  downloadsingleton.h  downloadsysconfigmanager.cpp  downloadsysconfigmanager.h  downloadtime.cpp  (+2 more)
TTKModule/TTKCore/downloadNetworkKits/: CMakeLists.txt  DownloadNetworkKits.pri  downloadabstractnetwork.cpp  downloadabstractnetwork.h  downloadabstractrequest.cpp  downloadabstractrequest.h  downloadbackgroundremotethread.cpp  downloadbackgroundremotethread.h  downloaddatasourcerequest.cpp  downloaddatasourcerequest.h  downloadnetworkabstract.cpp  downloadnetworkabstract.h  downloadnetworkdefines.h  downloadnetworkspeedtestthread.cpp  downloadnetworkspeedtestthread.h  downloadnetworkspeedthread.cpp  downloadnetworkspeedthread.h  downloadnetworkthread.cpp  downloadnetworkthread.h  downloadqueuecache.cpp  downloadqueuecache.h  downloadqueuerequest.cpp  downloadqueuerequest.h  downloadsourcethread.cpp  downloadsourcethread.h  downloadthread.cpp  downloadthread.h  downloadthreadabstract.cpp  downloadthreadabstract.h  downloadthreadmanager.cpp  downloadthreadmanager.h  downloadthunderskinrequest.cpp  downloadthunderskinrequest.h  downloadunits.cpp  downloadunits.h  downloadurlencoder.cpp  downloadurlencoder.h
TTKModule/TTKCore/downloadUtilsKits/: CMakeLists.txt  DownloadUtilsKits.pri  downloadalgorithmutils.cpp  downloadalgorithmutils.h  downloadcodecutils.cpp  downloadcodecutils.h  downloadcoreutils.cpp  downloadcoreutils.h  downloadfileutils.cpp  downloadfileutils.h  downloadimageutils.cpp  downloadimageutils.h  downloadnumberutils.cpp  downloadnumberutils.h  downloadstringutils.cpp  downloadstringutils.h  downloadurlutils.cpp  downloadurlutils.h  downloadwidgetutils.cpp  downloadwidgetutils.h
TTKModule/TTKWidget/: CMakeLists.txt  TTKWidget.pri
TTKModule/TTKWidget/downloadCoreKits/: CMakeLists.txt  DownloadCoreKits.pri  downloadabstractmovedialog.cpp  downloadabstractmovedialog.h  downloadabstractmoveresizewidget.cpp  downloadabstractmoveresizewidget.h  downloadabstractmovewidget.cpp  downloadabstractmovewidget.h  downloadabstracttablewidget.cpp  downloadabstracttablewidget.h  downloadanimationstackedwidget.cpp  downloadanimationstackedwidget.h  downloadclickedslider.cpp  downloadclickedslider.h  downloadcolordialog.cpp  downloadcolordialog.h  downloadmessagebox.cpp  downloadmessagebox.h  downloadtoastlabel.cpp  downloadtoastlabel.h  downloadtoollabelbutton.cpp  downloadtoollabelbutton.h  downloadtoolmenuwidget.cpp  downloadtoolmenuwidget.h  downloadtransitionanimationlabel.cpp  downloadtransitionanimationlabel.h  downloadwidgetrenderer.cpp  downloadwidgetrenderer.h
TTKModule/TTKWidget/downloadRemoteKits/: CMakeLists.txt  DownloadRemoteKits.pri  downloadremotewidget.cpp  downloadremotewidget.h
TTKModule/TTKWidget/downloadUiKits/: CMakeLists.txt  DownloadUiKits.pri  downloadapplication.ui  downloadbackgroundskindialog.ui  downloadcolordialog.ui  downloadfunctionuiobject.h  downloadmessageaboutdialog.ui  downloadmessagebox.ui  downloadnewfiledialog.ui  downloadsettingwidget.ui  downloadtinyuiobject.h  downloaduiobject.h
TTKModule/TTKWidget/downloadWidgetCoreKits/: DownloadWidgetCoreKits.pri  downloadabstractmovedialog.cpp  downloadabstractmovedialog.h  downloadabstractmoveresizewidget.cpp  downloadabstractmoveresizewidget.h  downloadabstractmovewidget.cpp  downloadabstractmovewidget.h  downloadabstracttablewidget.cpp  downloadabstracttablewidget.h  downloadanimationstackedwidget.cpp  downloadanimationstackedwidget.h  downloadclickedslider.cpp  downloadclickedslider.h  downloadcolordialog.cpp  downloadcolordialog.h  downloadmessagebox.cpp  downloadmessagebox.h  downloadtoollabelbutton.cpp  downloadtoollabelbutton.h  downloadtoolmenuwidget.cpp  downloadtoolmenuwidget.h  downloadtransitionanimationlabel.cpp  downloadtransitionanimationlabel.h
TTKModule/TTKWidget/downloadWidgetKits/: CMakeLists.txt  DownloadWidgetKits.pri  downloadbackgroundlistwidget.cpp  downloadbackgroundlistwidget.h  downloadbackgroundpopwidget.cpp  downloadbackgroundpopwidget.h  downloadbackgroundremotewidget.cpp  downloadbackgroundremotewidget.h  downloadbackgroundskindialog.cpp  downloadbackgroundskindialog.h  downloadbasewidget.cpp  downloadbasewidget.h  downloaderrorwidget.cpp  downloaderrorwidget.h  downloadlistwidget.cpp  (+27 more)
TTKThirdParty/TTKExtras/: CMakeLists.txt  TTKExtras.pro  TTKExtras.rc
(+171 files in other folders)
